--- a/src/Seating/seatBooking.css
+++ b/src/Seating/seatBooking.css
@@ -98,7 +98,7 @@
     margin: 0 0.5rem 0 0.5rem;
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
-    background-color: rgb(3, 198, 252);
+    background-color: rgb(30,168,60);
     border: none;
 }
 
@@ -114,7 +114,7 @@
     margin: 0 0.5rem 0 0.5rem;
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
-    background-color: rgb(248, 68, 100);
+    background-color: rgb(31,37,51);
     border: none;
 }
 
@@ -125,7 +125,8 @@
     margin-top: 0.8rem;
     height: 10vh;
     transform: skew(45deg);
-    background-color: rgb(3, 198, 252);
+    background-image: linear-gradient(rgb(30,168,60),rgb(3, 198, 252));
+    /* background-color: ; */
     border: none;
 }
 
@@ -177,8 +178,8 @@
   }
 
 .selected-seat{
-    background-color: rgb(3, 198, 252);
-    border: 1px solid rgb(3, 198, 252);
+    background-color: rgb(30,168,60);
+    border: 1px solid rgb(30,168,60);
 }
 
 .heading{
